--- a/GadgetEsia/css/style.css
+++ b/GadgetEsia/css/style.css
@@ -570,6 +570,20 @@ button {
     background-color: #363636;
 }
 
+.responsive-iframe {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    height: 0;
+    margin-bottom: 25px;
+  }
+  .responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
 /* about section end */
 
